Bus Information collection

--- a/api/package.json
+++ b/api/package.json
@@ -19,12 +19,15 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "date-time": "^2.1.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "is-empty": "^1.2.0",
     "pg": "^7.6.0",
     "pg-hstore": "^2.3.2",
     "pino": "^5.6.4",
     "sequelize": "^4.41.0",
+    "timediff": "^1.1.1",
     "uniqid": "^5.0.3"
   },
   "devDependencies": {
