--- a/ui/package.json
+++ b/ui/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
+    "@material/drawer": "^0.43.0",
     "auth0-js": "^9.8.1",
     "axios": "^0.18.0",
-    "bulma": "^0.7.2",
-    "bulma-extensions": "^4.0.0",
     "dotenv": "^6.0.0",
     "global": "^4.3.2",
     "js-file-download": "^0.4.4",
@@ -14,6 +15,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-json-tree": "^0.11.0",
+    "react-live-clock": "^3.0.0",
     "react-moment": "^0.8.4",
     "react-redux": "^5.1.1",
     "react-router": "^3.2.1",
